--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "yiisoft/yii": "^1.1"
+        "yiisoft/yii": "^1.1",
+        "tebazil/yii1-db-seeder": "^0.0.0"
     }
 }
